src/css/team.css
.section {
  text-align: center;
}
.meet {
  font-weight: 600;
  line-height: 1.5;
  margin-bottom: 12px;
}
.team-title {
  font-family: 'Cabin', sans-serif;
  font-weight: 400;
  font-size: 40px;
  line-height: 1.2;
  letter-spacing: 0.01em;
  margin-bottom: 20px;
}
.team-description {
  margin-bottom: 48px;
}
.team-list {
  display: flex;
  flex-direction: column;
  max-width: 343px;
  gap: 48px;
}
.team-card {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.team-photo {
  border-radius: 16px;
  overflow: hidden;
  margin-bottom: 20px;
}
.team-name {
  font-weight: 600;
  font-size: 18px;
  line-height: 1.6;
}
.team-info {
  margin-bottom: 12px;
}
.team-about {
  margin-bottom: 20px;
}
.team-socmedia {
  display: flex;
  gap: 14px;
}
.team-socmedia-link:focus {
  fill: #868584;
  transition: fill 250ms ease-in-out;
}
.team-socmedia-link:hover {
  fill: #868584;
  transition: fill 250ms ease-in-out;
}

/* Styles for Tablet devices */
@media only screen and (min-width: 768px) {
  .team-title {
    margin-bottom: 24px;
  }
  .team-description {
    margin-bottom: 40px;
  }
  .team-list {
    flex-direction: row;
    flex-wrap: wrap;
    max-width: 704px;
    justify-content: center;
    align-items: flex-start;
    gap: 24px;
  }
  .team-card {
    width: calc((100% - 24px) / 2);
  }
}

/* Styles for Desktop devices */
@media only screen and (min-width: 1336px) {
  .team-list {
    max-width: 1312px;
    gap: 67px 24px;
  }
  .team-card {
    width: calc((100% - 48px) / 3);
  }
}

